update on configuration file

--- a/config/config.ini
+++ b/config/config.ini
@@ -26,7 +26,7 @@ datetime_format = 'YYYY-MM-DD HH24:MI:SS'
 
 [purge_duplicate]
 transactions_key = transactions
-composite_keys = transaction_id,customer_id
+composite_keys = transactionId,customerId
 source_date_key = source_date
 
 [keys]
